feat: add preview image api
